# Dosificadorv1

./: CMakeLists.txt
main/: CMakeLists.txt  Dosificador.c  gpio_isr.c  gpio_isr.h  hx711_component.c  hx711_component.h  motor_dc.c  motor_dc.h  servo.c  servo.h  ultra.c  ultra.h  variables_globales.c  variables_globales.h
