idf_component_register(SRCS "Dosificador.c" 
                            "ultra.c"
                            "gpio_isr.c"
                            "servo.c"
                            "motor_dc.c"
                            "variables_globales.c"
                            "hx711_component.c"
                    INCLUDE_DIRS ".")

